--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-02  Simon Budig  <simon@gimp.org>
+
+	* app/widgets/gimpbrusheditor.c: Fixed brush spacing for brushes
+	with >= 2 spikes. Spotted by Joao S. O. Bueno.
+
+	Fixes bug #149099.
+
 2004-08-02  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/whirlpinch.c: ported to GimpPreviewArea.
