* plug-ins/rcm/rcm_callback.c * plug-ins/rcm/rcm_dialog.c * plug-ins/rcm/rcm_misc.c: Ported to GimpPreviewArea.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14293 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-03  DindinX  <david@dindinx.org>
+
+	* plug-ins/rcm/rcm_callback.c
+	* plug-ins/rcm/rcm_dialog.c
+	* plug-ins/rcm/rcm_misc.c: Ported to GimpPreviewArea.
+
 2004-08-02  Simon Budig  <simon@gimp.org>
 
 	* app/widgets/gimpbrusheditor.c: Fixed brush spacing for brushes
