--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-03  DindinX  <david@dindinx.org>
 
+	* plug-ins/fp/fp.c: converted to GimpPreviewArea.
+
+2004-08-03  DindinX  <david@dindinx.org>
+
 	* plug-ins/rcm/rcm_callback.c
 	* plug-ins/rcm/rcm_dialog.c
 	* plug-ins/rcm/rcm_misc.c: Ported to GimpPreviewArea.
