* plug-ins/ifscompose/ifscompose.c: ported to GimpPreviewArea.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14295 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-03  DindinX  <david@dindinx.org>
 
+	* plug-ins/ifscompose/ifscompose.c: ported to GimpPreviewArea.
+
+2004-08-03  DindinX  <david@dindinx.org>
+
 	* plug-ins/fp/fp.c: converted to GimpPreviewArea.
 
 2004-08-03  DindinX  <david@dindinx.org>
