--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-03  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/imagemap/imap_preview.c
+	* plug-ins/imagemap/imap_preview.h: ported to GimpPreviewArea.
+
 2004-08-03  DindinX  <david@dindinx.org>
 
 	* plug-ins/ifscompose/ifscompose.c: ported to GimpPreviewArea.
