--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-03  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpbrushgenerated.c (gimp_brush_generated_load): don't
+	leak the brush's name if parsing the shape fails.
+
+	(gimp_brush_generated_dirty): shut up bogus compiler warnings
+	about uninitialized variables.
+
 2004-08-03  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* plug-ins/imagemap/imap_preview.c
