* plug-ins/winicon/icodialog.c: ported to GimpPreviewArea. Still needs work.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14302 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-03  DindinX  <david@dindinx.org>
+
+	* plug-ins/winicon/icodialog.c: ported to GimpPreviewArea. Still needs
+	work.
+
 2004-08-03  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcontainergridview.c
