2004-08-04  Manish Singh  <yosh@gimp.org>
        * configure.in: Really really really really fix WINDRES logic.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14304 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-04  Manish Singh  <yosh@gimp.org>
+
+	* configure.in: Really really really really fix WINDRES logic.
+
 2004-08-03  DindinX  <david@dindinx.org>
 
 	* plug-ins/winicon/icodialog.c: ported to GimpPreviewArea. Still needs
