--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-04  Simon Budig  <simon@gimp.org>
+
+	* app/core/gimpbrushgenerated.c: Enhanced the range of the hardness
+	parameter to make more soft brushes possible. Please note that this
+	makes existing generated brushes look more soft. But since people
+	apparently rarely use more than one or two generated brushes and
+	these get changed frequently I guess it should be OK.
+
 2004-08-04  Michael Natterer  <mitch@gimp.org>
 
 	Allow URI drops from apps linked against GLib < 2.4.4 to GIMP
