2004-08-04  Simon Budig  <simon@gimp.org>
	* plug-ins/common/grid.c: changed the default colors for the
	first invocation to the current foregroud color which is more
	likely to be useful than the blue shades.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14311 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-04  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/common/grid.c: changed the default colors for the
+	first invocation to the current foregroud color which is more
+	likely to be useful than the blue shades.
+
 2004-08-04  Sven Neumann  <sven@gimp.org>
 
 	* themes/Default/images/Makefile.am
