--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-05  Roman Joost	<romanofski@gimp.org>
+
+	* de.po: updated and removed fuzzy strings
+
 2004-08-02  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
