2004-08-05  Michael Natterer  <mitch@gimp.org>
	* app/actions/context-actions.c
	* app/actions/context-commands.[ch]
	* menus/image-menu.xml.in: added actions, callbacks and menu items
	for the brush shape and spikes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14314 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-05  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/context-actions.c
+	* app/actions/context-commands.[ch]
+	* menus/image-menu.xml.in: added actions, callbacks and menu items
+	for the brush shape and spikes.
+
 2004-08-04  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/common/grid.c: changed the default colors for the
