2004-08-05  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimpiscissorstool.c: increased the handle size from 8
	to 9 pixels (which is the same as in the path tool) as suggested
	in bug #134250.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14323 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-08-05  Michael Natterer  <mitch@gimp.org>
 
+	* app/tools/gimpiscissorstool.c: increased the handle size from 8
+	to 9 pixels (which is the same as in the path tool) as suggested
+	in bug #134250.
+
+2004-08-05  Michael Natterer  <mitch@gimp.org>
+
 	* app/display/gimpstatusbar.c: make the cursor coordinates label
 	insensitive when displaying out-of-image coordinates.
 
