* plug-ins/common/wind.c: ported to GimpPreviewArea (from GimpOldPreview)
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14325 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-05  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/wind.c: ported to GimpPreviewArea (from
+	GimpOldPreview)
+
 2004-08-05  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpiscissorstool.c: increased the handle size from 8
