2004-08-06  Sven Neumann  <sven@gimp.org>
	* app/app-docs.sgml
	* app/app-sections.txt
	* app/app.types: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14331 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-06  Sven Neumann  <sven@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt
+	* app/app.types: updated.
+
 2004-07-29  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-sections.txt
