--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,5 +1,10 @@
 2004-08-06  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpstock.sgml: added new stock icons.
+
+2004-08-06  Sven Neumann  <sven@gimp.org>
+
 	* app/app-docs.sgml
 	* app/app-sections.txt
 	* app/app.types: updated.
