--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-06  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/flarefx.c: ported to GimpPreviewArea (from
+	GimpPreviewArea)
+
 2004-08-06  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/twain/Makefile.am (EXTRA_DIST): forgot to remove
