--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
+2004-08-06  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/depthmerge.c:
+	* plug-ins/common/despeckle.c: removed unused variables.
+
 2004-08-06  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/flarefx.c: ported to GimpPreviewArea (from
-	GimpPreviewArea)
+	GimpOldPreview)
 
 2004-08-06  Sven Neumann  <sven@gimp.org>
 
