--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-06  Sven Neumann  <sven@gimp.org>
 
+	* libgimpcolor/test-color-parser.c: include <glib-object.h>.
+
+2004-08-06  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/depthmerge.c:
 	* plug-ins/common/despeckle.c: removed unused variables.
 
