* plug-ins/common/polar.c: ported to GimpPreviewArea (from GimpOldPreview).
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14337 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-06  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/polar.c: ported to GimpPreviewArea (from
+	GimpOldPreview).
+
 2004-08-06  Sven Neumann  <sven@gimp.org>
 
 	* libgimpcolor/test-color-parser.c: include <glib-object.h>.
