2004-08-06  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimpsheartool.[ch]: applied (modified) patch from Ari
	Pollak which enables controlling the shear direction from the
	dialog and changing the shear direction without hitting "Reset".
	Fixes bug #149467.

	Also moved all static variables to the GimpShearTool struct and
	converted tabs to spaces.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14341 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-08-06  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpsheartool.[ch]: applied (modified) patch from Ari
+	Pollak which enables controlling the shear direction from the
+	dialog and changing the shear direction without hitting "Reset".
+	Fixes bug #149467.
+
+	Also moved all static variables to the GimpShearTool struct and
+	converted tabs to spaces.
+
 2004-08-06  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/nova.c: ported to GimpPreviewArea.
