* plug-ins/common/nlfilt.c: ported to GimpPreviewArea.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14344 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-06  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/nlfilt.c: ported to GimpPreviewArea.
+
 2004-08-06  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimptransformtool.h: removed the recently added
