* plug-ins/common/illusion.c: ported to GimpPreviewArea.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14347 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-07  DindinX  <david@dindinx.org>
 
+	* plug-ins/common/illusion.c: ported to GimpPreviewArea.
+
+2004-08-07  DindinX  <david@dindinx.org>
+
 	* libgimpwidgets/gimppreviewarea.c: fixed the rendering for INDEXED
 	and INDEXEDA image types.
 
