--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-07  Sven Neumann  <sven@gimp.org>
+
+	* configure.in:  bumped version number to 2.1.4.
+
 2004-08-07  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/illusion.c: ported to GimpPreviewArea.
