--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-07  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/jigsaw.c: ported to GimpPreviewArea, did some
+	cleanup and removed tabs.
+
 2004-08-07  Sven Neumann  <sven@gimp.org>
 
 	* configure.in:  bumped version number to 2.1.4.
