2004-08-07  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpgradientmenu.c: use a GtkDrawingArea instead of
	GtkPreview.

	* libgimp/gimpbrushmenu.c
	* libgimp/gimppatternmenu.c: minor cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14350 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-07  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpgradientmenu.c: use a GtkDrawingArea instead of
+	GtkPreview.
+
+	* libgimp/gimpbrushmenu.c
+	* libgimp/gimppatternmenu.c: minor cleanup.
+
 2004-08-07  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/jigsaw.c: ported to GimpPreviewArea, did some
