--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-07  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/max_rgb.c: use a GimpPreviewArea instead of
+	GimpOldPreview.
+
 2004-08-07  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimpgradientmenu.c: use a GtkDrawingArea instead of
