2004-08-07  Simon Budig  <simon@gimp.org>
	* libgimpwidgets/gimpcolorscales.c: emit the COLOR_CHANGED signal
	when the hex entry is changed.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14354 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-07  Simon Budig  <simon@gimp.org>
+
+	* libgimpwidgets/gimpcolorscales.c: emit the COLOR_CHANGED signal
+	when the hex entry is changed.
+
 2004-08-07  Sven Neumann  <sven@gimp.org>
 
 	* app/sanity.c: abort if the configured filename encoding can't be
