2004-08-08  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am: do not build test-preview-area by
	default, put it into EXTRA_PROGRAMS. Fixes parallel builds.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14358 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-08  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/Makefile.am: do not build test-preview-area by
+	default, put it into EXTRA_PROGRAMS. Fixes parallel builds.
+
 2004-08-08  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/plug-in-proc.[ch] (plug_in_proc_def_get_sensitive):
